rossoctl/examples/identity/keycloak_token_exchange/resources/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: keycloak
spec: {}
status: {}
