rossoctl/examples/identity/keycloak_token_exchange/resources/keycloak/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  serviceName: keycloak-service
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name:  keycloak
          image: docker.io/maiariyer/keycloak:poc0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
