rossoctl/examples/identity/keycloak_token_exchange/resources/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
spec:
  type: NodePort
  ports:
    - name: keyclaok
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: keycloak
